--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -8,10 +8,19 @@
   width: 100%;
   max-height: 400px;
   min-width: 100px;
-  background-color: white;
   z-index: 1;
+  box-shadow: 0 4px 5px 3px rgba(117, 120, 120, 0.459);
+  background-color: white;
+  opacity: 0.9;
+  transition: all 0.5s ease 0s;
+  height: 100% ;
 }
 
+.product:hover {
+  transform: scale(1.02);
+  overflow: hiddent;
+  box-shadow: 0 4px 4px 5px rgba(117, 120, 120, 0.561);
+}
 .product__rating {
   display: flex;
 }
