--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -19,3 +19,19 @@
   margin-bottom: -350px;
   mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
 }
+
+@media (max-width: 767px){
+  .home__container {
+    display: flex;
+    flex-direction: column;
+    
+  }
+  .home__row {
+    display: flex;
+    flex-direction: column;
+  }
+  .home__image {
+    margin-bottom: -110px
+  }
+  
+}
