--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -15,6 +15,13 @@
   transition: all 0.5s ease 0s;
   height: 100% ;
 }
+@media (max-width: 767px) {
+  .product {
+    width: 300px;
+    align-self: center;
+  }
+  
+}
 
 .product:hover {
   transform: scale(1.02);
